[package]
name = "nesp_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
once_cell = "1.8.0"
lazy_static = "1.4.0"
ansi_term = "0.12.1"

[[test]]
name = "logmanagertests"
path = "tests/lib.rs"
